rusty-cdk-macros/tests/fails/timeout_too_low.rs
use rusty_cdk_macros::timeout;

fn example() {
    let t = timeout!(0);
}

fn main() {}