rusty-cdk-macros/tests/fails/timeout_too_low.stderr
error: value should be at least 1
 --> tests/fails/timeout_too_low.rs:4:22
  |
4 |     let t = timeout!(0);
  |                      ^
